feat(backend): support donation image URLs
